--- a/index.html
+++ b/index.html
@@ -110,8 +110,18 @@
     <div id="s12" class="swiper-slide swiper-no-swiping">
       <p class="inner-text"></p>
     </div>
-    <div id="s13" class="swiper-slide swiper-no-swiping">
+    <div id="s13" class="swiper-slide">
+      <div>
+        <div class="inner-text">Now East.</div>
+      </div>
+    </div>
+    <div id="s12" class="swiper-slide swiper-no-swiping">
       <p class="inner-text"></p>
+    </div>
+    <div id="s14" class="swiper-slide">
+      <div>
+        <div class="inner-text">Now East.</div>
+      </div>
     </div>
   </div>
 </div>
