--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ window.globals = {
     window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 14){
   console.log("here");
-  window.addEventListener("deviceorientation", deviceCompassListener);
+  window.addEventListener("deviceorientation", handleOrientation);
   window.removeEventListener("devicemotion", handleMotion, true);
 }
   });
