--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <script type="text/javascript" src="orientation.js"></script>
 <!-- rotating squares-
 <script type="text/paperscript" src="square.js" canvas="myCanvas3"></script>
-<!--bubble interaction--
-<script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>-->
+<!--bubble interaction-->
+<script type="text/paperscript" src="bubbles.js" canvas="myCanvas2"></script>
 
 
 </head>
@@ -142,6 +142,12 @@
     </div>
     <div id="s18" class="swiper-slide">
       <canvas id="myCanvas"></canvas>
+    </div>
+    <div id="s19" class="swiper-slide">
+
+    </div>
+    <div id="s20" class="swiper-slide">
+      <canvas id="myCanvas2"></canvas>
     </div>
 
   </div>
