--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@ window.globals = {
 
 } else if (swiper.realIndex == 11) {
   window.addEventListener("deviceorientation", deviceCompassListener);
+  swiper.allowSlidePrev = false;
 } else if (swiper.realIndex == 13) {
+  swiper.allowSlidePrev = true;
   window.removeEventListener("deviceorientation", deviceCompassListener);
     window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 14){
