--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
 //initialise globals
 window.onload;
 window.globals = {
-  gx:0, gy:0, gz:0, gvx:0, gvy:0,
+  gx:0, gy:0, gz:0, gvx:0, gvy:0, canvasx: 0, canvasy: 0,
 };
+
+globals.canvasx = window.screen.width;
+globals.canvasy = window.screen.height;
 
   //initialise swiper
   var swiper = new Swiper('.swiper-container');
@@ -186,7 +189,7 @@ window.globals = {
   window.removeEventListener("deviceorientation", deviceCompassListener);
     window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 14){
-  console.log("here");
+
   window.addEventListener("deviceorientation", handleOrientation);
   window.removeEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 19){
