--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ globals.canvasy = window.screen.height;
   window.removeEventListener("deviceorientation", deviceCompassListener);
     window.addEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 14){
-
+  document.body.style.backgroundImage = "repeating-radial-gradient(white, #cc5500 25%, white 50%)";
   window.addEventListener("deviceorientation", handleOrientation);
   window.removeEventListener("devicemotion", handleMotion, true);
 } else if (swiper.realIndex == 19){
