--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ var Boid = Base.extend({
    // Update velocity
    this.vector += this.acceleration;
    this.maxSpeed = this.maxSpeed * (1 + globals.gvy);
-   console.log(this.maxSpeed);
+   console.log("speed:" +this.maxSpeed);
    // Limit speed (vector#limit?)
    this.vector.length = Math.min(this.maxSpeed, this.vector.length);
    this.position += this.vector;
