--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ window.addEventListener("devicemotion", handleMotion, true);
 
 <!-- Line animation script--
 <script type="text/javascript" src="animations.js"></script>-->
-<script type="text/paperscript" canvas="myCanvas4">
+<!--<script type="text/paperscript" canvas="myCanvas4">
 // Adapted from Flocking Processing example by Daniel Schiffman:
 // http://processing.org/learning/topics/flocking.html
 
@@ -479,7 +479,7 @@ function onKeyDown(event) {
  }
 }
 
-</script>
+</script>-->
 
 </body>
 </html>
